--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,8 +25,8 @@ jobs:
       # Build the Docker image
       - name: Build Docker image
         run: |
-          IMAGE_NAME= aarushi2205/netflix_movie_catalog
-          VERSION=$(date +'%Y%m%d%H%M%S')
+          IMAGE_NAME=aarushi2205/netflix_movie_catalog
+          VERSION=$(date+'%Y%m%d%H%M%S')
           docker build -t $IMAGE_NAME:$VERSION
           docker tag $IMAGE_NAME:$VERSION $IMAGE_NAME:latest
           docker push $IMAGE_NAME:$VERSION 
