--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,6 +1,6 @@
-name: Build and Push Docker Image
+# .github/workflows/docker-publish.yml
+name: Docker Build and Push
 
-# Triggers the workflow on push to the main branch
 on:
   push:
     branches:
@@ -9,25 +9,22 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-
+    
     steps:
-      # Checkout the code
       - name: Checkout code
         uses: actions/checkout@v2
-
-      # Log in to Docker Hub
+      
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      # Build the Docker image
-      - name: Build Docker image
+      - name: Build and Push Docker image
         run: |
-          IMAGE_NAME=aarushi2205/netflix_movie_catalog
-          VERSION=$(date+'%Y%m%d%H%M%S')
-          docker build -t $IMAGE_NAME:$VERSION
+          IMAGE_NAME=aarushi/netflix_movie_catalog
+          VERSION=$(date +'%Y%m%d%H%M%S')
+          docker build -t $IMAGE_NAME:$VERSION .
           docker tag $IMAGE_NAME:$VERSION $IMAGE_NAME:latest
-          docker push $IMAGE_NAME:$VERSION 
+          docker push $IMAGE_NAME:$VERSION
           docker push $IMAGE_NAME:latest
