--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,3 +28,22 @@ jobs:
           docker tag $IMAGE_NAME:$VERSION $IMAGE_NAME:latest
           docker push $IMAGE_NAME:$VERSION
           docker push $IMAGE_NAME:latest
+
+      - name: Deploy to EC2
+        env:
+          HOST: ${{ secrets.EC2_HOST }}
+          USER: ${{ secrets.EC2_USER }}
+          PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+          IMAGE_NAME: aarushi2205/netflix_movie_catalog
+        run: |
+          echo "$PRIVATE_KEY" > private_key.pem
+          chmod 400 private_key.pem
+          ssh -o StrictHostKeyChecking=no -i private_key.pem $USER@$HOST << 'EOF'
+            echo "Using IMAGE_NAME: $IMAGE_NAME"
+            sudo docker pull $IMAGE_NAME:latest
+            echo "Stopping and removing old container"
+            sudo docker stop $(docker ps -q) || true
+            sudo docker rm $(docker ps -a -q) || true
+            sudo docker run -d --name backend -p 8080:8080 $IMAGE_NAME:latest
+            echo "Running new container"
+          EOF
