--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -32,6 +32,7 @@ jobs:
       - name: Deploy to EC2
         env:
           HOST: ${{ secrets.EC2_HOST }}
+          HOST2: ${{ secrets.EC2_HOST2 }}
           USER: ${{ secrets.EC2_USER }}
           PRIVATE_KEY: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
           IMAGE_NAME: aarushi2205/netflix_movie_catalog
@@ -39,9 +40,14 @@ jobs:
           echo "$PRIVATE_KEY" > private_key.pem
           chmod 400 private_key.pem
           ssh -o StrictHostKeyChecking=no -i private_key.pem $USER@$HOST << EOF
-            echo "Using IMAGE_NAME: $IMAGE_NAME"
             sudo docker pull $IMAGE_NAME:latest
-            echo "Stopping and removing old container"
+            sudo docker stop backend || true
+            sudo docker rm backend || true
+            sudo docker run -d --name backend -p 8080:8080 $IMAGE_NAME:latest
+            echo "Running new container"
+          EOF
+          ssh -o StrictHostKeyChecking=no -i private_key.pem $USER@$HOST2 << EOF
+            sudo docker pull $IMAGE_NAME:latest
             sudo docker stop backend || true
             sudo docker rm backend || true
             sudo docker run -d --name backend -p 8080:8080 $IMAGE_NAME:latest
